# shred-extension-rs

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
shred-common/: Cargo.toml
shred-common/src/: lib.rs
shred-nautilus/: Cargo.toml
shred-nautilus/src/: lib.rs
shred-thunar/: Cargo.toml
shred-thunar/src/: lib.rs
src/: lib.rs
