[workspace]
resolver = "2"
members = [
    "shred-common",
    "shred-nautilus",
    "shred-thunar",
]

[workspace.package]
description = "Secure file shredding extension for Nautilus and Thunar."
repository = "https://github.com/williamcanin/shred-extension-rs"
version = "0.2.0"
authors = ["William C. Canin <hello.williamcanin@gmail.com>"]
edition = "2024"
rust-version = "1.93.1"

[workspace.dependencies]
gio = "0.22"
